--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://shihara2002.github.io/Advanced-Client-Side",
+  "homepage": "https://kavithra2002.github.io/Advanced-Client-Side",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
